--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,34 @@
 {
   "version": 2,
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "public": "dist/public",
+  "env": {
+    "NODE_ENV": "production"
+  },
   "builds": [
     {
       "src": "dist/index.cjs",
       "use": "@vercel/node"
+    },
+    {
+      "src": "dist/public/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "/dist/index.cjs",
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
+    },
+    {
+      "src": "/(?!api)",
+      "dest": "/dist/public/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "dist/index.cjs"
+      "dest": "/dist/public/$1"
     }
   ]
 }
